http://zcoinpaperwallet.com

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Zcoin Paper Wallet Generator</title>
 		<!--
-			generate-wallet.html (from https://bitcoinpaperwallet.com)
+			generate-wallet.html (from https://zcoinpaperwallet.com)
 			
 			Contact: Canton Becker / canton@gmail.com / www.cantonbecker.com
 			
@@ -13,7 +13,7 @@
 			gpg --recv-key 36E1D9B6
 			gpg --verify --with-fingerprint generate-wallet.html.sig generate-wallet.html
 			
-			The bitcoinpaperwallet.com folding wallet design may not be used for commercial use
+			The zcoinpaperwallet.com folding wallet design may not be used for commercial use
 			without permission. The design of the bitcoin hologram sticker used to seal these wallets
 			is copyrighted. As a courtesy, please do not modify this software in such a way that the
 			links to purchase hologram stickers and wallet making supplies are removed or pointed elsewhere.
@@ -26,7 +26,7 @@
 			
 			****************************************************************************************
 			****************************************************************************************
-			* Contributions to support the bitcoinpaperwallet.com developers are extremely welcome.
+			* Contributions to support the zcoinpaperwallet.com developers are extremely welcome.
 			* Donations are shared between Canton Becker, Artiom Chilaru (BIP38 implementation)
 			* Martin Ankerl (guilloche patterns), and 'pointbiz' (original bitaddress.org code)
 			* Bitcoin Donation Address: 1Pjg628vjMLBvADrPHsthtzKiryM2y46DG
@@ -205,9 +205,9 @@
 											}
 										</script>
 									</li>
-									<li><strong>?</strong> Are you using a secure operating system installation guaranteed to be free of spyware and viruses, for example, an <a href="#" onClick="window.open('https://bitcoinpaperwallet.com/ubuntu-linux-live-bootable-cd/', '_blank'); return false;">Ubuntu LiveCD?</a></li>
+									<li><strong>?</strong> Are you using a secure operating system installation guaranteed to be free of spyware and viruses, for example, an <a href="#" onClick="window.open('https://zcoinpaperwallet.com/ubuntu-linux-live-bootable-cd/', '_blank'); return false;">Ubuntu LiveCD?</a></li>
 								</ul>
-								<p><a href="https://bitcoinpaperwallet.com/#security" target="_blank">More security tips and answers to frequently asked questions &raquo;</a></p>
+								<p><a href="https://zcoinpaperwallet.com/#security" target="_blank">More security tips and answers to frequently asked questions &raquo;</a></p>
 							</div>
 							<span id="instructions2">
 								<p style="margin-top: 0;">
@@ -252,7 +252,7 @@
 							<br>
 							<br>
 							<span id="instructions3"><strong>Step 2: Print Front</strong><br>
-							Next you will print out the front side of your wallet. The public address and private key will be random-generated, <em>or</em> you can supply your own key by rolling dice, shuffling cards, etc. You may also duplicate an existing paper wallet or provide a "vanity" address if you have one. Tip: If you are printing several wallets, it's possible to <a href="https://bitcoinpaperwallet.com/printing-and-paper-tips/" target="_blank">print two per page</a>.</span> <br>
+							Next you will print out the front side of your wallet. The public address and private key will be random-generated, <em>or</em> you can supply your own key by rolling dice, shuffling cards, etc. You may also duplicate an existing paper wallet or provide a "vanity" address if you have one. Tip: If you are printing several wallets, it's possible to <a href="https://zcoinpaperwallet.com/printing-and-paper-tips/" target="_blank">print two per page</a>.</span> <br>
 							<br>
 							<span id="instructions4"><strong>Step 3: Print Back</strong><br>
 							Flip the front page over and put it back in your printer. This isn't just for good looks! The reverse design includes important tamper-resistant safeguards.</span> <br>
@@ -274,7 +274,7 @@
 								(1) Your printed ruler is horizontally centered on the page, leaving equal margins on the left and right sides of the page. (INCREASE the horizontal shift to push the ruler to the right.)<br />
 								(2) Your printed ruler is approximately the same size as a real ruler. Smaller by up to 1 inch is fine. (REDUCE the zoom to increase the ruler size.) <br /><br />
 								<br />
-								What settings worked best for you? <a href="https://bitcoinpaperwallet.com/feedback/" target="_blank">Feedback form &raquo;</a>
+								What settings worked best for you? <a href="https://zcoinpaperwallet.com/feedback/" target="_blank">Feedback form &raquo;</a>
 							</p>
 							<span class="print">
 							<a href="#" class="nicerButton" onClick="doPrint('calibration');">Print Calibration Test</a>
@@ -344,7 +344,7 @@
 						<div id="paperbip38settings">
 							<div class="background"></div>
 							<div class="dialog instructionsarea">
-								<p style="float: right;"><a href="https://bitcoinpaperwallet.com/wallet-tutorial-add-withdraw-funds/" target="_blank">Help / Instructions &raquo;</a></p>
+								<p style="float: right;"><a href="https://zcoinpaperwallet.com/wallet-tutorial-add-withdraw-funds/" target="_blank">Help / Instructions &raquo;</a></p>
 								<h2>About "BIP38" Encryption</h2>
 								<p>The advantage with BIP38 is that if your paper wallet is stolen or compromised, the private key cannot be recovered without your password. <em>Even a very short password adds a strong degree of protection</em>. However, if you encrypt your private key with BIP38 and you lose your password, it will be impossible for you to recover the funds you have sent to this wallet.</p>
 								<p>
@@ -515,9 +515,9 @@
 								<br />
 								<br />
 								<h1><span id="instructions20">Tips &amp; FAQ's</span></h1>
-								&bull; <a href="https://bitcoinpaperwallet.com/printing-and-paper-tips/" target="_blank">What kind of printer and paper to use &raquo;</a><br />
-								&bull; <a href="https://bitcoinpaperwallet.com/wallet-tutorial-add-withdraw-funds/" target="_blank">Adding to and spending from a paper wallet &raquo;</a><br />
-								&bull; <a href="https://bitcoinpaperwallet.com/bip38-password-encrypted-wallets/" target="_blank">How and when to use BIP38 encryption &raquo;</a><br />
+								&bull; <a href="https://zcoinpaperwallet.com/printing-and-paper-tips/" target="_blank">What kind of printer and paper to use &raquo;</a><br />
+								&bull; <a href="https://zcoinpaperwallet.com/wallet-tutorial-add-withdraw-funds/" target="_blank">Adding to and spending from a paper wallet &raquo;</a><br />
+								&bull; <a href="https://zcoinpaperwallet.com/bip38-password-encrypted-wallets/" target="_blank">How and when to use BIP38 encryption &raquo;</a><br />
 							</span>
 						</div>
 					</div>
@@ -544,12 +544,12 @@
 							<div id="paperqrscanner">
 								<div class="background"></div>
 								<div id="mainbody" class="dialog instructionsarea">
-									<p style="float: right;"><a href="https://bitcoinpaperwallet.com/how-to-scan-qr-codes-with-camera/" target="_blank" style="font-family: 'Lucida Console', Monaco, monospace;">Help / Instructions &raquo;</a></p>
+									<p style="float: right;"><a href="https://zcoinpaperwallet.com/how-to-scan-qr-codes-with-camera/" target="_blank" style="font-family: 'Lucida Console', Monaco, monospace;">Help / Instructions &raquo;</a></p>
 									<h2>Scan QR code using your camera</h2>
 									<div id="paperqrnotsupported" style="color: red" class="hide">Sorry, but your web browser does not support the HTML5 camera controls. Try using a recent version of Firefox (recommended), Chrome or Opera.</div>
 									<div id="paperqrpermissiondenied" style="color: red" class="hide">
 										<p>Permission denied. Your browser should display a message requesting access to your camera. Please click the "Allow" button to enable the camera.</p>
-										<p>If you are using Chrome and you launched this generator by opening the HTML file from your own computer "locally", you may need to launch Chrome from the command line and specify the <a href="https://bitcoinpaperwallet.com/how-to-scan-qr-codes-with-camera/" target="_blank" style="font-family: 'Lucida Console', Monaco, monospace;">--allow-file-access-from-files</a> flag. Or you can set up a local web server (Apache) and run this generator via http://127.0.0.1... or, give up and just use Firefox.</p>
+										<p>If you are using Chrome and you launched this generator by opening the HTML file from your own computer "locally", you may need to launch Chrome from the command line and specify the <a href="https://zcoinpaperwallet.com/how-to-scan-qr-codes-with-camera/" target="_blank" style="font-family: 'Lucida Console', Monaco, monospace;">--allow-file-access-from-files</a> flag. Or you can set up a local web server (Apache) and run this generator via http://127.0.0.1... or, give up and just use Firefox.</p>
 									</div>
 									<div id="paperqrerror" style="color: red"></div>
 									<div id="paperqroutput"></div>
@@ -657,7 +657,7 @@
 						<span class="item" id="footerlabeldonations"><b>Donations keep this service open &amp; free!</b></span>
 						<span class="item" style="font-size: 11px; font-family: 'Courier New', Courier, monospace;">
 						<strong>Zcoin</strong>:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;aAqf1MAqn8GSCdLiyLvvk51cBfVYUzanHW<br />
-						<span class="item" style="font-size: 11px;">Contributions are shared by the <a href="https://bitcoinpaperwallet.com/#thanks" target="_blank">developers</a>, including zcoin developer @sn.</span>
+						<span class="item" style="font-size: 11px;">Contributions are shared by the <a href="https://zcoinpaperwallet.com/#thanks" target="_blank">developers</a>, including zcoin developer @sn.</span>
 					</div>
 				</div>
 				<div class="authorpgp">
@@ -680,7 +680,7 @@
 						<a href="#" class="nicerButton" onClick="document.getElementById('siginfo').style.display='none'; return(false);">OK</a>
 					</div>
 					<span class="item"><b>Security &amp; signatures</b></span>
-					<span class="item" style="font-size: 90%;">For <a href="https://bitcoinpaperwallet.com/#security" target="_blank">secure wallet generation</a>, do not print wallets "live" from bitcoinpaperwallet.com.<br />Instead, download this generator from GitHub and run the HTML as a "local" file:</span>
+					<span class="item" style="font-size: 90%;">For <a href="https://zcoinpaperwallet.com/#security" target="_blank">secure wallet generation</a>, do not print wallets "live" from zcoinpaperwallet.com.<br />Instead, download this generator from GitHub and run the HTML as a "local" file:</span>
 					<span class="item"><a href="https://github.com/cantonbecker/bitcoinpaperwallet" target="_blank" id="footerlabelgithub"><strong>Secure Download</strong> (GitHub ZIP file)</a></span>
 					<span class="item" id="footerlabelsig" style="font-size: 90%;"><a href="#" onClick="document.getElementById('siginfo').style.display='block'; return(false);">Validate PGP/GPG signature</a></span>
 					<span class="item" id="footerlabeltests" style="font-size: 90%;">Run unit tests: <a href="?unittests=1#tests">basic</a> | <a href="?asyncunittests=1#tests">async</a></span>
