more index changes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<title>Zcoin Paper Wallet Generator</title>
 		<!--
-			generate-wallet.html (from https://bitcoinpaperwallet.com)
+			index.html (from https://bitcoinpaperwallet.com)
 			
 			Contact: Canton Becker / canton@gmail.com / www.cantonbecker.com
 			
-			generate-wallet.html is always distributed with a PGP signature "generate-wallet.html.sig" which you
+			index.html is always distributed with a PGP signature "index.html.sig" which you
 			can use to validate the integrity and authorship of this file like so:
 			
 			gpg --recv-key 36E1D9B6
-			gpg --verify --with-fingerprint generate-wallet.html.sig generate-wallet.html
+			gpg --verify --with-fingerprint index.html.sig index.html
 			
 			The bitcoinpaperwallet.com folding wallet design may not be used for commercial use
 			without permission. The design of the bitcoin hologram sticker used to seal these wallets
@@ -662,17 +662,17 @@
 				</div>
 				<div class="authorpgp">
 					<div id="siginfo" style="display: none; position: absolute; top: -300px;">
-						After downloading and extracting the <a href="https://github.com/zcoinrocks/zcoinpaperwallet" target="_blank">ZIP package</a> for this generator, you should find a file named <b>generate-wallet.html.sig</b>
+						After downloading and extracting the <a href="https://github.com/zcoinofficial/zcoin-paper-js" target="_blank">ZIP package</a> for this generator, you should find a file named <b>index.html.sig</b>
 						which you can use to:
 						<ol>
-							<li> verify that <strong>generate-wallet.html</strong> hasn't been tampered with, and</li>
+							<li> verify that <strong>index.html</strong> hasn't been tampered with, and</li>
 							<li>
 								get proof that it really was authored by Canton Becker (<a class="__cf_email__" href="/cdn-cgi/l/email-protection" data-cfemail="e7848689938889a7808a868e8bc984888a">[email&#160;protected]</a><script type="application/javascript" data-cfhash='f9e31' type="text/javascript">/* <![CDATA[ */!function(t,e,r,n,c,a,p){try{t=document.currentScript||function(){for(t=document.getElementsByTagName('script'),e=t.length;e--;)if(t[e].getAttribute('data-cfhash'))return t[e]}();if(t&&(c=t.previousSibling)){p=t.parentNode;if(a=c.getAttribute('data-cfemail')){for(e='',r='0x'+a.substr(0,2)|0,n=2;a.length-n;n+=2)e+='%'+('0'+('0x'+a.substr(n,2)^r).toString(16)).slice(-2);p.replaceChild(document.createTextNode(decodeURIComponent(e)),c)}p.removeChild(t)}}catch(u){}}()/* ]]> */</script>) whose public key and fingerprint can be confirmed at <a href="http://cantonbecker.com">cantonbecker.com</a>, bitcointalk.org, etc.
 							</li>
 						</ol>
 						For example, if you have GPG installed, just open the terminal, change directory (cd) to where this file lives, and type:<br />
 						<code>  gpg --recv-key 36E1D9B6<br />
-						gpg --verify --with-fingerprint generate-wallet.html.sig generate-wallet.html</code>
+						gpg --verify --with-fingerprint index.html.sig index.html</code>
 						<br /><br />And then verify the signature's fingerprint against Canton Becker's <a href="http://cantonbecker.com">published PGP/GPG fingerprint</a>.<br /><br />
 						<a href="http://www.google.com/search?q=how+to+verify+PGP+%22.sig%22+signature+on+file">Learn how to verify a PGP-signed file &raquo;</a>
 						<br />
