--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 				</div>
 				<div class="authorpgp">
 					<div id="siginfo" style="display: none; position: absolute; top: -300px;">
-						After downloading and extracting the <a href="https://github.com/zcoinofficial/zcoin-paper-js" target="_blank">ZIP package</a> for this generator, you should find a file named <b>index.html.sig</b>
+						After downloading and extracting the <a href="https://github.com/zcoinofficial/zcoin-paper-js/archive/master.zip" target="_blank">ZIP package</a> for this generator, you should find a file named <b>index.html.sig</b>
 						which you can use to:
 						<ol>
 							<li> verify that <strong>index.html</strong> hasn't been tampered with, and</li>
